pruebas llamada API Beeceptor

--- a/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
+++ b/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
@@ -40,8 +40,8 @@
         </div>
       </div>
     </div> -->
-    <div class="version">
+    <!-- <div class="version">
       <label disabled class="pe-auto">v{{ currentApplicationVersion }}</label>
-    </div>
+    </div> -->
   </div>
 </ng-scrollbar>
