--- a/src/app/demo/pages/tables/tbl-bootstrap/tbl-bootstrap.component.html
+++ b/src/app/demo/pages/tables/tbl-bootstrap/tbl-bootstrap.component.html
@@ -1,42 +1,10 @@
 <div class="row">
-  <div class="col-xl-12">
+  <!-- <div class="col-xl-12">
     <app-card
       cardTitle="Basic Table"
       [options]="false"
       blockClass="table-border-style"
     >
-      <div class="table-responsive">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>First Name</th>
-              <th>Last Name</th>
-              <th>Username</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>&#64;mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>&#64;fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>&#64;twitter</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
     </app-card>
   </div>
   <div class="col-xl-12">
@@ -62,23 +30,11 @@
               <td>Otto</td>
               <td>&#64;mdo</td>
             </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>&#64;fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>&#64;twitter</td>
-            </tr>
           </tbody>
         </table>
       </div>
     </app-card>
-  </div>
+  </div> -->
   <div class="col-xl-12">
     <app-card
       cardTitle="Striped Table"
@@ -89,30 +45,18 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th>#</th>
-              <th>First Name</th>
-              <th>Last Name</th>
-              <th>Username</th>
+              <th>Nombre</th>
+              <th>Género</th>
+              <th>Edad</th>
+              <th>Habilidades</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>&#64;mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>&#64;fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>&#64;twitter</td>
+            <tr *ngFor="let superHeroe of superHeroes">
+              <th scope="row">{{superHeroe.nombre}}</th>
+              <td>{{superHeroe.genero}}</td>
+              <td>{{calcularEdad(superHeroe.fechaNacimiento)}}</td>
+              <td>{{superHeroe.habilidades}}</td>
             </tr>
           </tbody>
         </table>
