--- a/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
+++ b/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
@@ -21,7 +21,7 @@
         }
       }
     </ul>
-    <!-- <div class="p-20">
+    <div class="p-20">
       <div class="card pro-card text-center">
         <div class="card-body p-2">
           <img
@@ -39,9 +39,9 @@
           >
         </div>
       </div>
-    </div> -->
-    <!-- <div class="version">
+    </div>
+    <div class="version">
       <label disabled class="pe-auto">v{{ currentApplicationVersion }}</label>
-    </div> -->
+    </div>
   </div>
 </ng-scrollbar>
