--- a/src/app/demo/pages/form-elements/basic-elements/basic-elements.component.html
+++ b/src/app/demo/pages/form-elements/basic-elements/basic-elements.component.html
@@ -11,13 +11,24 @@
       <div class="row">
         <div class="col-md-6">
           <form [formGroup]="formulario" (ngSubmit)="enviar()">
-            <mat-form-field>
-              <mat-label>Nombre</mat-label>
-              <input matInput placeholder="Nombre" formControlName="nombre">
-              <mat-error *ngIf="formulario.get('nombre').invalid && formulario.get('nombre').touched">El nombre es requerido</mat-error>
-            </mat-form-field>
+            <div class="form-group">
+              <mat-form-field>
+                <mat-label>Nombre</mat-label>
+                <input matInput placeholder="Nombre" formControlName="nombre">
+                <mat-error *ngIf="formulario.get('nombre').invalid && formulario.get('nombre').touched">El nombre es requerido</mat-error>
+              </mat-form-field>
+            </div>
+            <div class="form-group">
+              <!-- <mat-form-field> -->
+                <mat-label>Género</mat-label>
+                <mat-radio-group formControlName="sexo" id="generoRadio">
+                  <mat-radio-button value="M">Masculino</mat-radio-button>
+                  <mat-radio-button value="F">Femenino</mat-radio-button>
+                </mat-radio-group>
+                <mat-error *ngIf="formulario.get('sexo').invalid && formulario.get('sexo').touched">Selecciona el género</mat-error>
+              <!-- </mat-form-field> -->
+            </div>
             <button mat-raised-button color="primary" type="submit">Enviar</button>
-            <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
           </form>
         </div>
       </div>
