función decopdificar superpoderes

--- a/src/app/demo/pages/tables/tbl-bootstrap/tbl-bootstrap.component.html
+++ b/src/app/demo/pages/tables/tbl-bootstrap/tbl-bootstrap.component.html
@@ -67,7 +67,7 @@
               <td>{{calcularEdad(superHeroe.fechaNacimiento)}}</td>
               <td>{{superHeroe.genero === 'H' ? 'Hombre' : 'Mujer'}}</td>
               <td>{{getDescripcionOjos(superHeroe.colorOjos)}}</td>
-              <td>{{superHeroe.superpoderes}}</td>
+              <td>{{getDescripcionSuperpoderes(superHeroe.superpoderes)}}</td>
             </tr>
           </tbody>
         </table>
