mejoras: borrar de la lista y añadir color en campo de entrada de crear

--- a/src/app/demo/pages/dialogs/dialog-animations-example-dialog.html
+++ b/src/app/demo/pages/dialogs/dialog-animations-example-dialog.html
@@ -3,6 +3,6 @@
   ¿Seguro que desea eliminar a {{data.nombre}}?
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <button mat-button mat-dialog-close cdkFocusInitial>Ok</button>
+  <button mat-button mat-dialog-close (click)="sendData(false)">No</button>
+  <button mat-button mat-dialog-close cdkFocusInitial (click)="sendData(true)">Ok</button>
 </mat-dialog-actions>
