--- a/src/app/demo/pages/tables/tbl-bootstrap/tbl-bootstrap.component.html
+++ b/src/app/demo/pages/tables/tbl-bootstrap/tbl-bootstrap.component.html
@@ -51,7 +51,7 @@
       blockClass="table-border-style"
     >
       <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table">
           <thead>
             <tr>
               <th>Editar</th>
@@ -64,7 +64,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let superHeroe of superHeroesFiltrado">
+            <tr *ngFor="let superHeroe of superHeroesFiltrado" [style.--bs-table-bg]="superHeroe.color">
               <td>
                 <button mat-raised-button color="primary" (click)="editar()">Editar</button>
               </td>
