mejoras tabla: toggle para editar

--- a/src/app/demo/pages/dialogs/dialog-animations-example-dialog.html
+++ b/src/app/demo/pages/dialogs/dialog-animations-example-dialog.html
@@ -1,8 +1,8 @@
-<h2 mat-dialog-title>Delete file</h2>
+<h2 mat-dialog-title>Eliminar superhéroe</h2>
 <mat-dialog-content>
   ¿Seguro que desea eliminar a {{data.nombre}}?
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close (click)="sendData(false)">No</button>
-  <button mat-button mat-dialog-close cdkFocusInitial (click)="sendData(true)">Ok</button>
+  <button mat-button mat-dialog-close cdkFocusInitial (click)="sendData(true)">Eliminar</button>
 </mat-dialog-actions>
