acceso a crear form

--- a/src/app/demo/pages/tabla-listado/pages/tabla-listado.component.html
+++ b/src/app/demo/pages/tabla-listado/pages/tabla-listado.component.html
@@ -52,7 +52,7 @@
     >
       <div class="table-responsive">
         <p><mat-slide-toggle [(ngModel)]="tablaEditable">Editar/Eliminar</mat-slide-toggle></p>
-        <button type="submit" class="btn btn-primary">Nuevo Superhéroe</button>
+        <button type="submit" class="btn btn-primary" (click)="crearSuperHeroe()">Nuevo Superhéroe</button>
         <table class="table">
           <thead>
             <tr>
