--- a/src/app/demo/pages/tabla-listado/pages/tabla-listado.component.html
+++ b/src/app/demo/pages/tabla-listado/pages/tabla-listado.component.html
@@ -1,40 +1,14 @@
-<div class="row">
-  <!-- <div class="col-xl-12">
-    <app-card
-      cardTitle="Basic Table"
-      [options]="false"
-      blockClass="table-border-style"
-    >
-    </app-card>
+<div class="row" *ngIf="!superHeroes.length">
+  <div style="display: flex; justify-content: center; margin-top: 50px;">
+    <mat-progress-spinner
+          class="example-margin"
+          [color]="color"
+          [mode]="mode"
+          [value]="value">
+      </mat-progress-spinner>
   </div>
-  <div class="col-xl-12">
-    <app-card
-      cardTitle="Hover Table"
-      [options]="false"
-      blockClass="table-border-style"
-    >
-      <div class="table-responsive">
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>First Name</th>
-              <th>Last Name</th>
-              <th>Username</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>&#64;mdo</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </app-card>
-  </div> -->
+</div>
+<div class="row" *ngIf="superHeroes.length">
   <div style="display: flex; justify-content: center; margin-top: 50px;">
     <mat-form-field appearance="outline">
       <mat-label>Buscar superhéroe</mat-label>
