--- a/src/app/demo/pages/tabla-listado/pages/tabla-listado.component.html
+++ b/src/app/demo/pages/tabla-listado/pages/tabla-listado.component.html
@@ -15,8 +15,6 @@
       [options]="false"
       blockClass="table-border-style">
       <p><mat-slide-toggle [(ngModel)]="tablaEditable">Editar/Eliminar</mat-slide-toggle></p>
-      <button type="submit" class="btn btn-primary" (click)="crearSuperHeroe()">Nuevo Superhéroe</button>
-      <br>
       <mat-form-field appearance="outline">
         <mat-label>Filtrar superhéroes</mat-label>
         <input matInput placeholder="Buscar superhéroe" [formControl]="searchControl">
@@ -51,4 +49,10 @@
       <div *ngIf="!superHeroesFiltrado.length"><strong>No existe ese superhéroe que cumpla ese filtro</strong></div>
     </app-card>
   </div>
+</div>
+<div class="fixed-button active">
+  <a class="btn btn-md btn-theme has-ripple" >
+    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+    Nuevo Superhéroe
+  </a>
 </div>
