--- a/src/app/theme/layout/admin/navigation/nav-logo/nav-logo.component.html
+++ b/src/app/theme/layout/admin/navigation/nav-logo/nav-logo.component.html
@@ -1,9 +1,9 @@
 <div>
   <a [routerLink]="['/dashboard']" class="b-brand">
     <div class="b-bg">
-      <i class="feather icon-trending-up"></i>
+      <i class="fa fa-space-shuttle" aria-hidden="true"></i>
     </div>
-    <span class="b-title">Datta Able</span>
+    <span class="b-title">Superhéroes</span>
   </a>
   <a
     href="javascript:"
