--- a/src/app/superheroes/pages/tabla-listado/pages/tabla-listado.component.html
+++ b/src/app/superheroes/pages/tabla-listado/pages/tabla-listado.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="!superHeroes.length">
+<div class="row" *ngIf="!datosCargados">
   <div style="display: flex; flex-direction: column; align-items: center; margin-top: 50px;">
     <mat-progress-spinner
           class="example-margin"
@@ -9,17 +9,19 @@
     <span style="margin-top: 20px; font-size: 1.2em;">Cargando datos...</span>
   </div>
 </div>
-<div class="row" *ngIf="superHeroes.length">
+<div class="row" *ngIf="datosCargados">
   <div class="col-xl-12">
     <app-card
       cardTitle="Listado Superhéroes"
       [options]="false"
       blockClass="table-border-style">
-      <p><mat-slide-toggle [(ngModel)]="tablaEditable">Editar/Eliminar</mat-slide-toggle></p>
-      <mat-form-field appearance="outline">
-        <mat-label>Filtrar superhéroes</mat-label>
-        <input matInput placeholder="Buscar superhéroe" [formControl]="searchControl">
-      </mat-form-field>
+      <ng-container *ngIf="superHeroes.length">
+        <p><mat-slide-toggle [(ngModel)]="tablaEditable">Editar/Eliminar</mat-slide-toggle></p>
+        <mat-form-field appearance="outline">
+          <mat-label>Filtrar superhéroes</mat-label>
+          <input matInput placeholder="Buscar superhéroe" [formControl]="searchControl">
+        </mat-form-field>
+      </ng-container>
       <div class="table-responsive">
         <table class="table" *ngIf="superHeroesFiltrado.length">
           <thead>
@@ -47,7 +49,8 @@
           </tbody>
         </table>
       </div>
-      <div *ngIf="!superHeroesFiltrado.length"><strong>No existe ese superhéroe que cumpla ese filtro</strong></div>
+      <div *ngIf="superHeroes.length && !superHeroesFiltrado.length"><strong>No existe ese superhéroe que cumpla ese filtro</strong></div>
+      <div *ngIf="!superHeroes.length"><strong>No existen superhéroes</strong></div>
     </app-card>
   </div>
 </div>
