estructura para textos

--- a/src/app/superheroes/pages/tabla-listado/pages/tabla-listado.component.html
+++ b/src/app/superheroes/pages/tabla-listado/pages/tabla-listado.component.html
@@ -27,11 +27,11 @@
           <thead>
             <tr>
               <th *ngIf="tablaEditable"></th>
-              <th>Nombre</th>
-              <th>Edad</th>
-              <th>Género</th>
-              <th>Color ojos</th>
-              <th>Superpoderes<th>
+              <th>{{textos.nombre}}</th>
+              <th>{{textos.edad}}</th>
+              <th>{{textos.genero}}</th>
+              <th>{{textos.colorOjos}}</th>
+              <th>{{textos.superpoderes}}<th>
             </tr>
           </thead>
           <tbody>
