acceso fab-button

--- a/src/app/superheroes/pages/tabla-listado/pages/tabla-listado.component.html
+++ b/src/app/superheroes/pages/tabla-listado/pages/tabla-listado.component.html
@@ -55,8 +55,8 @@
   </div>
 </div>
 <div class="fixed-button active">
-  <a class="btn btn-md btn-theme has-ripple" >
+  <span class="btn btn-md btn-theme has-ripple" (click)="crearSuperHeroe()">
     <i class="fa fa-plus-circle" aria-hidden="true"></i>
     Nuevo Superhéroe
-  </a>
+  </span>
 </div>
